fix(m2-04): close independent review findings