@@ -1,5 +1,6 @@
 package ah.runtime;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -8,7 +9,8 @@ import java.util.Set;
 /** ADR-0005 ABI selection policy. CPU architecture alone is never a risk signal. */
 public final class AbiCompatibilityPolicy {
     private static final List<String> ABI_ORDER =
-            List.of("armeabi-v7a", "arm64-v8a", "x86", "x86_64");
+            Collections.unmodifiableList(
+                    Arrays.asList("armeabi-v7a", "arm64-v8a", "x86", "x86_64"));
     private static final Set<String> AVAILABLE =
             Collections.unmodifiableSet(new LinkedHashSet<>(ABI_ORDER));
     private static final String LIMITATION = "OUTPUT_LIMITED_TO_INPUT_NATIVE_ABIS";
@@ -26,7 +28,9 @@ public final class AbiCompatibilityPolicy {
         LinkedHashSet<String> effective = canonicalInput.isEmpty()
                 ? new LinkedHashSet<>(ABI_ORDER)
                 : new LinkedHashSet<>(canonicalInput);
-        List<String> limitations = canonicalInput.isEmpty() ? List.of() : List.of(LIMITATION);
+        List<String> limitations = canonicalInput.isEmpty() || canonicalInput.equals(AVAILABLE)
+                ? Collections.emptyList()
+                : Collections.singletonList(LIMITATION);
         return new AbiCompatibility(AVAILABLE, canonicalInput, effective, limitations);
     }
 
